# cortex

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: launch.sh  setup.sh
src/: audio.rs  cognition.rs  intelligence.rs  main.rs  synthesis.rs
