[package]
name = "cortex"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"       # Mikrofon
whisper-rs = "0.13" # STT
rubato = "0.14"     # Resampler
anyhow = "1.0"      # Hata Yönetimi
rodio = "0.17"      # Hoparlör

# JSON İletişimi (Llama Server ile konuşmak için)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"